# src/Spryker/Glue/AppPaymentBackendApi/Mapper/Payment/GlueRequestPaymentMapper.php
@@ -9,6 +9,7 @@ namespace Spryker\Glue\AppPaymentBackendApi\Mapper\Payment;
 
 use Generated\Shared\Transfer\GlueRequestTransfer;
 use Generated\Shared\Transfer\InitializePaymentRequestTransfer;
+use Generated\Shared\Transfer\PaymentsTransmissionsRequestTransfer;
 use GuzzleHttp\RequestOptions;
 use Spryker\Zed\AppPayment\AppPaymentConfig;
 
@@ -24,5 +25,20 @@ class GlueRequestPaymentMapper implements GlueRequestPaymentMapperInterface
         $initializePaymentRequestTransfer->setTenantIdentifier($metaData[AppPaymentConfig::HEADER_TENANT_IDENTIFIER][0] ?? ($metaData['x-store-reference'][0] ?? ''));
 
         return $initializePaymentRequestTransfer;
+    }
+
+    public function mapGlueRequestTransferToPaymentsTransmissionsRequestTransfer(
+        GlueRequestTransfer $glueRequestTransfer
+    ): PaymentsTransmissionsRequestTransfer {
+        $metaData = $glueRequestTransfer->getMeta();
+
+        /** @phpstan-var array<string, mixed> */
+        $requestData = json_decode((string)$glueRequestTransfer->getContent(), true);
+
+        $paymentsTransmissionsRequestTransfer = new PaymentsTransmissionsRequestTransfer();
+        $paymentsTransmissionsRequestTransfer->fromArray($requestData, true);
+        $paymentsTransmissionsRequestTransfer->setTenantIdentifier($metaData[AppPaymentConfig::HEADER_TENANT_IDENTIFIER][0] ?? ($metaData['x-store-reference'][0] ?? ''));
+
+        return $paymentsTransmissionsRequestTransfer;
     }
 }
